tests/ui/typeck/struct-index-err-ice-issue-126744.rs
struct X {,} //~ ERROR expected identifier, found `,`

fn main() {
    || {
        if let X { x: 1,} = (X {}) {}
    };
}
